--- a/sec2.html
+++ b/sec2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QUE ES FSC?</title>
+    <title>¿QUE ES FSC?</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">   
@@ -137,7 +137,7 @@
 <div class="container">
         <section>
             <h2 align="center">FSC</h2>
-		<p align="justify">FSC "Consejo de Administración Forestal" en español. Es una organización internacional sin fines de lucro que establece estándares y certifica prácticas de gestión forestal sostenible. Cuando una empresa, como Morysan en el caso de bolsas, menciona que sus productos tienen la certificación FSC, significa que los materiales utilizados para fabricar esas bolsas provienen de fuentes forestales gestionadas de manera responsable y sostenible. Esto implica que la empresa se preocupa por la conservación de los recursos forestales y el medio ambiente al utilizar materias primas certificadas por FSC.</p>
+		<p align="justify">FSC (Consejo de Administración Forestal) Es una organización internacional sin fines de lucro que establece estándares y certifica prácticas de gestión forestal sostenible. Cuando una empresa, como Morysan en el caso de bolsas, menciona que sus productos tienen la certificación FSC, significa que los materiales utilizados para fabricar esas bolsas provienen de fuentes forestales gestionadas de manera responsable y sostenible. Esto implica que la empresa se preocupa por la conservación de los recursos forestales y el medio ambiente al utilizar materias primas certificadas por FSC.</p>
             <p align="center">Haz clic para <a href="https://latinoamerica.fsc.org/es-ni/que%20es%20el%20FSC#:~:text=El%20Forest%20Stewardship%20Council%20(FSC,de%20los%20bosques%20del%20mundo">SABER MAS DE FSC</a> .</p>
         <p align="center"><a href="pre.htm">PRESENTACION FSC</a> .</p>
 	</section>
