--- a/sec3.html
+++ b/sec3.html
@@ -33,6 +33,7 @@
             justify-content: space-between;
             align-items: center;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+		position: fixed;
         }
 
         .header .logo img 
@@ -160,7 +161,6 @@ color:purple;
 <div class="container">
         <section>
             <h2>EXAMENES PARA DIFERENTES AREAS</h2>
-		<h3><b>PONCHO ES PUTOOO</b></h3>
 		<p align="justify">En esta seccion de la pagina se pone a prueba los conocimientos de la persona a quien se le aplique es un cuestionario de 10 preguntas el cual esta echo en GOOGLE FORM los resultados de la evalucion seran guardados</p>
             
 		
