--- a/sec3.html
+++ b/sec3.html
@@ -33,7 +33,10 @@
             justify-content: space-between;
             align-items: center;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-		position: fixed;
+	width: 100%; 
+	left: 0; 
+	top: 0; 
+	position: fixed;
         }
 
         .header .logo img 
