--- a/sec3.html
+++ b/sec3.html
@@ -143,6 +143,30 @@ color:purple;
     .button1:hover {
             background:-webkit-radial-gradient(200px top, ellipse,  #FFAA00, #FF6100, #FF0000);
     }
+@media screen and (max-width: 768px) 
+	{
+            .header {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .header h1 {
+                margin-top: 10px;
+            }
+
+            .header .logo img {
+                margin-bottom: 10px;
+            }
+
+            .button-container {
+                margin-bottom: 20px;
+            }
+
+            .container {
+                padding: 10px;
+            }
+
+        }
 </style> 
 </head>
 <body>
