--- a/sec2.html
+++ b/sec2.html
@@ -119,6 +119,31 @@
             box-shadow: 0 0 10px rgb(223, 128, 0);
 		border-radius: 20px; 
         }
+
+	@media screen and (max-width: 768px) 
+	{
+            .header {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .header h1 {
+                margin-top: 10px;
+            }
+
+            .header .logo img {
+                margin-bottom: 10px;
+            }
+
+            .button-container {
+                margin-bottom: 20px;
+            }
+
+            .container {
+                padding: 10px;
+            }
+
+        }
     </style>
 
 </head>
