--- a/pre.htm
+++ b/pre.htm
@@ -137,7 +137,30 @@
             width: auto;
             height: auto; 
         }
+@media screen and (max-width: 768px) 
+	{
+            .header {
+                flex-direction: column;
+                text-align: center;
+            }
 
+            .header h1 {
+                margin-top: 10px;
+            }
+
+            .header .logo img {
+                margin-bottom: 10px;
+            }
+
+            .button-container {
+                margin-bottom: 20px;
+            }
+
+            .container {
+                padding: 10px;
+            }
+
+        }
     </style>
 
 </head>
