--- a/eje.html
+++ b/eje.html
@@ -129,7 +129,31 @@
 	.imge{
 	flex: 1;
 		}
-    </style>
+@media screen and (max-width: 768px) 
+	{
+            .header {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .header h1 {
+                margin-top: 10px;
+            }
+
+            .header .logo img {
+                margin-bottom: 10px;
+            }
+
+            .button-container {
+                margin-bottom: 20px;
+            }
+
+            .container {
+                padding: 10px;
+            }
+
+        }    
+</style>
 
 </head>
 <body>
