--- a/cal.html
+++ b/cal.html
@@ -136,7 +136,30 @@
     color: transparent;
 }
 
+@media screen and (max-width: 768px) 
+	{
+            .header {
+                flex-direction: column;
+                text-align: center;
+            }
 
+            .header h1 {
+                margin-top: 10px;
+            }
+
+            .header .logo img {
+                margin-bottom: 10px;
+            }
+
+            .button-container {
+                margin-bottom: 20px;
+            }
+
+            .container {
+                padding: 10px;
+            }
+
+        }
 </style>
 
 </head>
