--- a/cal.html
+++ b/cal.html
@@ -136,7 +136,7 @@
     color: transparent;
 }
 
-@media screen and (max-width: 768px) 
+@media only screen and (min-width: 768px) and (max-width: 991px)
 	{
             .header {
                 flex-direction: column;
