--- a/cal.html
+++ b/cal.html
@@ -113,7 +113,8 @@
         }
 	.container 
 	{
-            max-width: 800px;
+            min-width: 768px;
+	    max-width: 991px;
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
