--- a/cal.html
+++ b/cal.html
@@ -158,6 +158,9 @@
 
             .container {
                 padding: 10px;
+		 height: auto;
+		width: auto;
+		display:none;
             }
 
         }
