--- a/cal.html
+++ b/cal.html
@@ -136,7 +136,10 @@
     -webkit-background-clip: text;
     color: transparent;
 }
-
+img {
+    max-width: 100%;
+    height: auto;
+}
 @media only screen and (min-width: 768px) and (max-width: 991px)
 	{
             .header {
