--- a/cal.html
+++ b/cal.html
@@ -106,6 +106,7 @@
         /* Pie de Página */
         footer {
 		background-color: rgba(255, 255, 255, 0);
+		position: absolute;
             color: #000000;
             padding: 10px 0;
             text-align: center;
