--- a/cal.html
+++ b/cal.html
@@ -110,6 +110,8 @@
             color: #000000;
             padding: 10px 0;
             text-align: center;
+	    width: 100%;
+  	    height: 40px;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
 	.container 
