--- a/sec3.html
+++ b/sec3.html
@@ -85,13 +85,17 @@
         }
 
 	/* PP */      
-        footer {
-            background-color: rgba(255, 255, 255, 0);
+       footer {
+	    background-color: rgba(255, 255, 255, 0);
+	    position: absolute;
             color: #000000;
             padding: 10px 0;
             text-align: center;
+	    width: 100%;
+  	    height: 40px;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
+
 /* CONTENIDO */
 .container 
 	{
@@ -143,7 +147,7 @@ color:purple;
     .button1:hover {
             background:-webkit-radial-gradient(200px top, ellipse,  #FFAA00, #FF6100, #FF0000);
     }
-@media screen and (max-width: 768px) 
+@media only screen and (min-width: 480px) and (max-width: 991px)
 	{
             .header {
                 flex-direction: column;
@@ -164,6 +168,9 @@ color:purple;
 
             .container {
                 padding: 10px;
+		 height: auto;
+		width: auto;
+		display:none;
             }
 
         }
