--- a/sec2.html
+++ b/sec2.html
@@ -104,11 +104,14 @@
         }
 
         
-        footer {
-            background-color: rgba(255, 255, 255, 0);
+          footer {
+	    background-color: rgba(255, 255, 255, 0);
+	    position: absolute;
             color: #000000;
             padding: 10px 0;
             text-align: center;
+	    width: 100%;
+  	    height: 40px;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
 .container {
@@ -120,7 +123,8 @@
 		border-radius: 20px; 
         }
 
-	@media screen and (max-width: 768px) 
+	
+@media only screen and (min-width: 480px) and (max-width: 991px)
 	{
             .header {
                 flex-direction: column;
@@ -141,8 +145,10 @@
 
             .container {
                 padding: 10px;
+		 height: auto;
+		width: auto;
+		display:none;
             }
-
         }
     </style>
 
