--- a/pre.htm
+++ b/pre.htm
@@ -118,6 +118,9 @@
             color: #000000; 
             padding: 10px 0;
             text-align: center;
+	    width: 100%;
+  	    height: 40px;
+	    position: absolute;	
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
 .container {
@@ -137,7 +140,7 @@
             width: auto;
             height: auto; 
         }
-@media screen and (max-width: 768px) 
+@media only screen and (min-width: 480px) and (max-width: 991px)
 	{
             .header {
                 flex-direction: column;
@@ -158,8 +161,10 @@
 
             .container {
                 padding: 10px;
+		 height: auto;
+		width: auto;
+		display:none;
             }
-
         }
     </style>
 
