--- a/index.html
+++ b/index.html
@@ -104,11 +104,14 @@
         }
 
         /* Pie de Página */
-        footer {
-		background-color: rgba(255, 255, 255, 0);
+          footer {
+	    background-color: rgba(255, 255, 255, 0);
+	    position: absolute;
             color: #000000;
             padding: 10px 0;
             text-align: center;
+	    width: 100%;
+  	    height: 40px;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
 	.container 
@@ -136,7 +139,7 @@
     color: transparent;
 }
 
-@media screen and (max-width: 768px) 
+@media only screen and (min-width: 480px) and (max-width: 991px)
 	{
             .header {
                 flex-direction: column;
@@ -157,9 +160,11 @@
 
             .container {
                 padding: 10px;
-            }
-
-        }
+		 height: auto;
+		width: auto;
+		display:none;
+            }        
+	}
 </style>
 
 </head>
