--- a/cal.html
+++ b/cal.html
@@ -148,9 +148,9 @@
             <img src="logo.jpg" alt="Logo de la empresa">
 	<h1>CALIDAD</h1> 
  
-            <a href="sec1.htm"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
-            <a href="sec2.htm"><i class="fas fa-file"></i> FSC </a>
-	    <a href="sec3.htm"><i class="fas fa-file"></i> EXAMEN </a>
+            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
+            <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
+	    <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
 	    
      
 	</div>
