--- a/cal.html
+++ b/cal.html
@@ -1,15 +1,16 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINA DE INICIO</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <link rel="icon" href="favicon.png" type="image/x-icon"> 
-<style>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <style>
         /* Estilos globales */
         body {
             font-family: 'Verdana', sans-serif;
@@ -136,24 +137,63 @@
     color: transparent;
 }
 
+.navbar {
+            display: none;
+            flex-direction: column;
+        }
 
+        .navbar a {
+            display: block;
+            padding: 10px 0;
+        }
+
+        .menu-toggle {
+            display: none;
+            cursor: pointer;
+        }
+
+        @media screen and (max-width: 768px) {
+            .navbar {
+                display: flex;
+                background-color: rgba(255, 255, 255, 0.9);
+                position: absolute;
+                top: 80px;
+                width: 100%;
+                flex-direction: column;
+                text-align: center;
+                box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            }
+
+            .menu-toggle {
+                display: block;
+                color: #fff;
+                font-size: 24px;
+                margin-right: 20px;
+            }
+
+            .header {
+                position: relative;
+            }
+        }
 </style>
 
 </head>
 <body>
 
 
-    <header>
+    < <header>
         <div class="header">
             <img src="logo.jpg" alt="Logo de la empresa">
-	<h1>CALIDAD</h1> 
- 
-            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
-            <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
-	    <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
-	    
-     
-	</div>
+            <h1>CALIDAD</h1>
+            <div class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+            <nav class="navbar">
+                <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
+                <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
+                <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
+            </nav>
+        </div>
 <div class="container">
 
         <section>
@@ -184,4 +224,15 @@
 <footer>
 <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
 </footer>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.menu-toggle').click(function () {
+                $('.navbar').toggleClass('active');
+            });
+        });
+    </script>
+
 </html>
