--- a/cal.html
+++ b/cal.html
@@ -181,7 +181,7 @@
 <body>
 
 
-    < <header>
+    <header>
         <div class="header">
             <img src="logo.jpg" alt="Logo de la empresa">
             <h1>CALIDAD</h1>
