--- a/cal.html
+++ b/cal.html
@@ -17,20 +17,20 @@
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
-	    background-image: url('fondo1.jpg');
-	    background-size: cover; 
-	    background-repeat: no-repeat; 
-	    background-attachment: fixed; 
+            background-image: url('fondo1.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         /* Encabezado */
         .header {
+            display: none;
+            justify-content: space-between;
+            align-items: center;
             background-color: rgba(255, 255, 255, 0);
             color: #fff;
             padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
         }
 
@@ -54,92 +54,16 @@
             border: 1px solid #C11A1A;
         }
 
-        /* Tabla */
-        .table-container {
-            margin: 20px;
+        /* Menú de navegación receptivo */
+        .navbar {
+            display: flex;
+            background-color: rgba(255, 255, 255, 0.9);
+            position: absolute;
+            top: 80px;
             width: 100%;
-            overflow: auto;
-            max-height: 500px;
-        }
-
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: #fff;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .table th,
-        .table td {
-            padding: 10px;
-            text-align: center;
-            border: 1px solid #ccc;
-        }
-
-        .table th {
-            background-color: #333;
-            color: #fff;
-            position: sticky;
-            top: 0;
-        }
-
-        /* Botones */
-        .button-container {
-            text-align: center;
-            margin: 20px;
-        }
-
-        .button {
-            background-color: #28a745;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            margin-right: 10px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.7s ease;
-        }
-
-        .button:hover {
-            background-color: #1e7e34;
-        }
-
-        /* Pie de Página */
-        footer {
-		background-color: rgba(255, 255, 255, 0);
-            color: #000000;
-            padding: 10px 0;
-            text-align: center;
-            box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
-        }
-	.container 
-	{
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgb(223, 128, 0);
-		border-radius: 20px; 
-        }
-.rotating-element {
-  width: 800px;
-  height: 30px;
-  line-height: 300px;
-  transition: transform 0.5s ease-in-out; 
-}
-
-.rotating-element:hover {
-  transform: rotateY(360deg); 
-    
-.container h2{
-    background-image: linear-gradient(to right, #FF3300, #FF6600, #FF9900, #FFCC00, #FFFF00);
-    -webkit-background-clip: text;
-    color: transparent;
-}
-
-.navbar {
-            display: none;
             flex-direction: column;
+            text-align: center;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         .navbar a {
@@ -148,40 +72,54 @@
         }
 
         .menu-toggle {
-            display: none;
+            display: block;
+            color: #fff;
+            font-size: 24px;
+            margin-right: 20px;
             cursor: pointer;
         }
 
-        @media screen and (max-width: 768px) {
+        @media screen and (min-width: 769px) {
             .navbar {
-                display: flex;
-                background-color: rgba(255, 255, 255, 0.9);
-                position: absolute;
-                top: 80px;
-                width: 100%;
-                flex-direction: column;
-                text-align: center;
-                box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-            }
-
-            .menu-toggle {
-                display: block;
-                color: #fff;
-                font-size: 24px;
-                margin-right: 20px;
+                display: none;
             }
 
             .header {
-                position: relative;
+                display: flex;
             }
         }
-</style>
 
+        /* Contenido adicional... */
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgb(223, 128, 0);
+            border-radius: 20px;
+        }
+
+        .rotating-element {
+            width: 800px;
+            height: 30px;
+            line-height: 300px;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .rotating-element:hover {
+            transform: rotateY(360deg);
+        }
+
+        .container h2 {
+            background-image: linear-gradient(to right, #FF3300, #FF6600, #FF9900, #FFCC00, #FFFF00);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+    </style>
 </head>
+
 <body>
-
-
-    <header>
+    <header class="header">
         <div class="header">
             <img src="logo.jpg" alt="Logo de la empresa">
             <h1>CALIDAD</h1>
@@ -194,39 +132,35 @@
                 <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
             </nav>
         </div>
-<div class="container">
-
-        <section>
-
- <h2 align="center">¿QUÉ ES EL ÁREA DE CALIDAD?</h2>
-            <h5 align="center">Calidad se encarga de:</h5> 
-<ol>
-<li>Realizar evaluaciones de riesgos.</li>
-<li>Gestión de documentos.</li>
-<li>Realizar auditorías internas al sistema.</li>
-<li>Diseñar e implementar acciones correctivas de acuerdo con los hallazgos de auditoría.</li>
-<li>Administrar programas de auditoría.</li>
-<li>Implementar iniciativas de mejora.</li>
-</ol>
-<div style="text-align: center;">
-<img src="cal.jpg" alt="BPM">
-</div> 
-<p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
- 			
-        </section>
-<p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p>
-</div>
+        <!-- ... Contenido actual ... -->
     </header>
 
+    <div class="container">
+        <section>
+            <!-- Contenido actual ... -->
+            <h2 align="center">¿QUÉ ES EL ÁREA DE CALIDAD?</h2>
+            <h5 align="center">Calidad se encarga de:</h5>
+            <ol>
+                <li>Realizar evaluaciones de riesgos.</li>
+                <li>Gestión de documentos.</li>
+                <li>Realizar auditorías internas al sistema.</li>
+                <li>Diseñar e implementar acciones correctivas de acuerdo con los hallazgos de auditoría.</li>
+                <li>Administrar programas de auditoría.</li>
+                <li>Implementar iniciativas de mejora.</li>
+            </ol>
+            <div style="text-align: center;">
+                <img src="cal.jpg" alt="BPM">
+            </div>
+            <p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
+        </section>
+        <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p>
+    </div>
 
+    <footer>
+        <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
+    </footer>
 
-</body>
-<footer>
-<strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
-</footer>
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
         $(document).ready(function () {
             $('.menu-toggle').click(function () {
@@ -234,5 +168,6 @@
             });
         });
     </script>
+</body>
 
 </html>
