--- a/cal.html
+++ b/cal.html
@@ -164,6 +164,7 @@
             font-size: 24px;
             margin-right: 20px;
             cursor: pointer;
+		top
         }
 
         .header {
@@ -210,19 +211,19 @@
 
 <body>
     <header class="header">
-        <div class="header">
-            <img src="logo.jpg" alt="Logo de la empresa">
-            <h1>CALIDAD</h1>
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
-            <nav class="navbar">
-                <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
-                <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
-                <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
-            </nav>
+    <div class="header">
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
         </div>
-    </header>
+        <img src="logo.jpg" alt="Logo de la empresa">
+        <h1>CALIDAD</h1>
+        <nav class="navbar">
+            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
+            <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
+            <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
+        </nav>
+    </div>
+</header>
 
     <div class="container">
         <section>
