--- a/cal.html
+++ b/cal.html
@@ -162,7 +162,7 @@
             display: block;
             color: #fff;
             font-size: 24px;
-            margin-right: 20px;
+            margin-left: auto;
             cursor: pointer;
 		top
         }
