--- a/cal.html
+++ b/cal.html
@@ -136,7 +136,12 @@
     -webkit-background-clip: text;
     color: transparent;
 }
-
+.container img
+{
+object-fit: cover;
+  width:100%;
+  height:100%;
+}
 
         /* Menú de navegación receptivo */
         .navbar {
