--- a/sec1.html
+++ b/sec1.html
@@ -214,14 +214,14 @@
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
-            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
+            <a href="cal.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
             <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
             <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
         </nav>
     </div>
 </header>
 <div class="container">
-	<div class="text">
+	
         <section>
 		<h2 align="center"> BUENAS PRACTICAS</h2>
 		<h3 align="center">¿QUE SON LAS BUENAS PRACTICAS DE MANUFACTURA?</h3>
@@ -243,7 +243,7 @@
     <p align="justify">NOTA: la prueba que se le realiza al trabajador o trabajadora, esta realizada en un GOOGLE FORM los resultados de esta prueba se sube a la nube de quien realizo la prueba </p>
 			
 </section> 		
-</div>
+
 </div>
 </header>
 
@@ -251,4 +251,12 @@
 <footer>
 <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
 </footer>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.menu-toggle').click(function () {
+                $('.navbar').slideToggle();
+            });
+        });
+    </script>
 </html>
