--- a/sec1.html
+++ b/sec1.html
@@ -221,7 +221,7 @@
     </div>
 </header>
 <div class="container">
-	
+	<div class="text">
         <section>
 		<h2 align="center"> BUENAS PRACTICAS</h2>
 		<h3 align="center">¿QUE SON LAS BUENAS PRACTICAS DE MANUFACTURA?</h3>
@@ -243,7 +243,7 @@
     <p align="justify">NOTA: la prueba que se le realiza al trabajador o trabajadora, esta realizada en un GOOGLE FORM los resultados de esta prueba se sube a la nube de quien realizo la prueba </p>
 			
 </section> 		
-
+</div>
 </div>
 </header>
 
