--- a/sec1.html
+++ b/sec1.html
@@ -236,7 +236,7 @@
  			<img src="b3.jpg" alt="BPM">
 			</div>	
 		</div>	
-<p align="center"><a href="eje.htm">ALGUNOS EJEMPLOS DE BPM</a></p> 
+<p align="center"><a href="eje.html">ALGUNOS EJEMPLOS DE BPM</a></p> 
 <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLScWewiqLR_kQcwyzVu-2txd_s813f8tzBE1NMSFRvEXPFF8DQ/viewform?usp=sf_link">CLICK</a> para evaluar al trabajador.</p>
     <p align="justify">NOTA: la prueba que se le realiza al trabajador o trabajadora, esta realizada en un GOOGLE FORM los resultados de esta prueba se sube a la nube de quien realizo la prueba </p>
 			
