--- a/sec1.html
+++ b/sec1.html
@@ -131,6 +131,11 @@
 	.imge{
 	flex: 1;
 	}
+	.img
+{
+width: 100%;
+height: auto;
+}
 	.navbar {
             display: flex;
             background-color: rgba(255, 255, 255, 0.9);
@@ -233,7 +238,7 @@
 			Las empresas alimentarias que intervienen en cada etapa de la cadena son responsables de adoptar todas las medidas a su alcance para que los productos alimenticios cumplan con estas normas de higiene.</p>
 			<div style="text-align: center;">	
 			<div class="imge">
- 			<img src="b3.jpg" alt="BPM">
+ 			<img src="b3.jpg" alt="BPM" >
 			</div>	
 		</div>	
 <p align="center"><a href="eje.html">ALGUNOS EJEMPLOS DE BPM</a></p> 
