--- a/sec3.html
+++ b/sec3.html
@@ -9,17 +9,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="icon" href="favicon.png" type="image/x-icon"> 
-    <style>
-        /* Estilos globales */
+     <style>
         body {
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
-            background-image: url('fondo1.jpg');
-            background-size: cover; 
-            background-repeat: no-repeat; 
-            background-attachment: fixed; 
+	    background-image: url('fondo1.jpg');
+	    background-size: cover; 
+	    background-repeat: no-repeat; 
+	    background-attachment: fixed; 
         }
 
         /* Encabezado */
@@ -37,6 +36,7 @@
             width: 100px;
             height: auto;
         }
+
         .header a {
             color: #FFF;
             text-decoration: none;
@@ -52,7 +52,36 @@
             border: 1px solid #C11A1A;
         }
 
-        /* botones */
+        /* Tabla */
+        .table-container {
+            margin: 20px;
+            width: 100%;
+            overflow: auto;
+            max-height: 500px;
+        }
+
+        .table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: #fff;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .table th,
+        .table td {
+            padding: 10px;
+            text-align: center;
+            border: 1px solid #ccc;
+        }
+
+        .table th {
+            background-color: #333;
+            color: #fff;
+            position: sticky;
+            top: 0;
+        }
+
+        /* Botones */
         .button-container {
             text-align: center;
             margin: 20px;
@@ -73,70 +102,47 @@
             background-color: #1e7e34;
         }
 
-        /* PP */      
+        /* Pie de Página */
         footer {
-            background-color: rgba(255, 255, 255, 0);
-            position: absolute;
+		background-color: rgba(255, 255, 255, 0);
             color: #000000;
             padding: 10px 0;
             text-align: center;
-            width: 100%;
-            height: 40px;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
-
-        /* CONTENIDO */
-        .container {
+	.container 
+	{
             max-width: 800px;
-            min-width: auto;
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgb(223, 128, 0);
-            border-radius: 20px; 
+		border-radius: 20px; 
         }
+.rotating-element {
+  width: 800px;
+  height: 30px;
+  line-height: 300px;
+  transition: transform 0.5s ease-in-out; 
+}
 
-        .container a {
-            outline: none;
-            text-decoration: none;
-            padding: 2px 1px 0;
-        }
+.rotating-element:hover {
+  transform: rotateY(360deg); 
+    
+.container h2{
+    background-image: linear-gradient(to right, #FF3300, #FF6600, #FF9900, #FFCC00, #FFFF00);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.container img
+{
+object-fit: cover;
+  width:100%;
+  height:100%;
+}
 
-        .container a:link {
-            color: #000000;
-        }
-
-        .container a:visited {
-            color: #000000;
-        }
-
-        .container a:focus,
-        .container a:hover {
-            border-buttom: 1px solid;
-        }
-
-        .container a:active {
-            color:purple;
-        }
-
-        .button1 {
-            display: inline-block;
-            padding: 10px 20px;
-            background: radial-gradient(200px top, ellipse,  #FF0000, #FF6100, #FFAA00);
-            background: -webkit-radial-gradient(200px top, ellipse,  #FF0000, #FF6100, #FFAA00);
-            background: -moz-radial-gradient(200px top, ellipse,  #FF0000, #FF6100, #FFAA00);
-            background: -o-radial-gradient(200px top, ellipse,  #FF0000, #FF6100, #FFAA00);
-            background: -ms-radial-gradient(200px top, ellipse,  #FF0000, #FF6100, #FFAA00);
-            text-decoration: none;
-            border: none;
-            border-radius: 10px;
-        }
-
-        .button1:hover {
-            background: -webkit-radial-gradient(200px top, ellipse,  #FFAA00, #FF6100, #FF0000);
-        }
-
-         .navbar {
+        /* Menú de navegación receptivo */
+        .navbar {
             display: flex;
             background-color: rgba(255, 255, 255, 0.9);
             position: absolute;
@@ -206,7 +212,7 @@
     </style>
 </head>
 <body>
-        <header class="header">
+         <header class="header">
 <img src="logo.jpg" alt="Logo de la empresa">
         <h1>CALIDAD</h1> 
 
@@ -253,10 +259,11 @@
     </footer>
 
     <script>
-        function toggleMenu() {
-            var mobileMenu = document.querySelector('.mobile-menu');
-            mobileMenu.style.display = (mobileMenu.style.display === 'block') ? 'none' : 'block';
-        }
+        $(document).ready(function () {
+            $('.menu-toggle').click(function () {
+                $('.navbar').slideToggle();
+            });
+        });
     </script>
 </body>
 </html>
