--- a/sec3.html
+++ b/sec3.html
@@ -222,9 +222,9 @@ object-fit: cover;
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
-            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
+            <a href="cal.html"><i class="fas fa-file"></i> INICIO</a>
+            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS </a>
             <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
-            <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
         </nav>
     </div>
 </header>
