--- a/cal.html
+++ b/cal.html
@@ -210,6 +210,11 @@ object-fit: cover;
             .header {
                 display: flex;
             }
+		.container img
+		{
+		width:300px;
+		height:200px;
+		}	
         }
     </style>
 </head>
@@ -245,7 +250,7 @@ object-fit: cover;
                 <li>Implementar iniciativas de mejora.</li>
             </ol>
             <div style="text-align: center;">
-                <img src="cal.jpg" alt="BPM" width="auto" height="auto">
+                <img src="cal.jpg" alt="BPM">
             </div>
             <p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
         </section>
