--- a/cal.html
+++ b/cal.html
@@ -210,8 +210,7 @@ object-fit: cover;
             .header {
                 display: flex;
             }
-		.container img
-		{
+		.ima img{
 		width:300px;
 		height:200px;
 		}	
@@ -249,9 +248,11 @@ object-fit: cover;
                 <li>Administrar programas de auditoría.</li>
                 <li>Implementar iniciativas de mejora.</li>
             </ol>
+		<div class="ima">
             <div style="text-align: center;">
                 <img src="cal.jpg" alt="BPM">
             </div>
+		</div>
             <p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
         </section>
         <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p>
