--- a/cal.html
+++ b/cal.html
@@ -210,7 +210,7 @@ object-fit: cover;
             .header {
                 display: flex;
             }
-		.ima img{
+		.ima .cal img{
 		width:300px;
 		height:200px;
 		}	
