--- a/pre.htm
+++ b/pre.htm
@@ -118,9 +118,6 @@
             color: #000000; 
             padding: 10px 0;
             text-align: center;
-	    width: 100%;
-  	    height: 40px;
-	    position: absolute;	
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
 .container {
@@ -140,32 +137,7 @@
             width: auto;
             height: auto; 
         }
-@media only screen and (min-width: 480px) and (max-width: 991px)
-	{
-            .header {
-                flex-direction: column;
-                text-align: center;
-            }
 
-            .header h1 {
-                margin-top: 10px;
-            }
-
-            .header .logo img {
-                margin-bottom: 10px;
-            }
-
-            .button-container {
-                margin-bottom: 20px;
-            }
-
-            .container {
-                padding: 10px;
-		 height: auto;
-		width: auto;
-		display:none;
-            }
-        }
     </style>
 
 </head>
@@ -183,7 +155,7 @@
         <section>
             <h2>FSC</h2>
 	
-<iframe width="auto" height="auto" src="https://sway.office.com/s/muJ4L5RyyETmA7f3/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>	
+<iframe width="760px" height="500px" src="https://sway.office.com/s/muJ4L5RyyETmA7f3/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>	
 </section>
 
 </div>
