--- a/sec3.html
+++ b/sec3.html
@@ -223,7 +223,7 @@ object-fit: cover;
         </div>
         <nav class="navbar">
             <a href="cal.html"><i class="fas fa-file"></i> INICIO</a>
-            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS </a>
+            <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
             <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
         </nav>
     </div>
