--- a/sec2.html
+++ b/sec2.html
@@ -224,7 +224,7 @@ object-fit: cover;
         </div>
         <nav class="navbar">
             <a href="cal.html"><i class="fas fa-file"></i> INICIO </a>
-            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS </a>
+            <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
             <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
         </nav>
     </div>
