--- a/pre.htm
+++ b/pre.htm
@@ -208,4 +208,12 @@
 <footer>
 <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
 </footer>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.menu-toggle').click(function () {
+                $('.navbar').slideToggle();
+            });
+        });
+    </script>
 </html>
