--- a/pre.htm
+++ b/pre.htm
@@ -201,7 +201,7 @@
         <section>
             <h2>FSC</h2>
 	
-<iframe width="100%" height="auto" src="https://sway.office.com/s/muJ4L5RyyETmA7f3/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>	
+<iframe width="100%" height="100%" src="https://sway.office.com/s/muJ4L5RyyETmA7f3/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>	
 </section>
 </div>
 </body>
