--- a/pre.htm
+++ b/pre.htm
@@ -120,12 +120,14 @@
             text-align: center;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
-.container {
-            max-width: 850px;
-            margin: 0px auto;
+.container 
+	{
+            max-width: 800px;
+            margin: 20px auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 0 10px rgb(223, 128, 0);
+		border-radius: 20px; 
         }
 
         .section 
