--- a/pre.htm
+++ b/pre.htm
@@ -110,6 +110,9 @@
         
         footer 
 	{
+		position: absolute;
+		width: 100%;
+  		height: 40px;
             background-image: url('fondo2.jpg');
             background-size: cover; 
             background-repeat: no-repeat; 
