--- a/sec2.html
+++ b/sec2.html
@@ -237,7 +237,7 @@ object-fit: cover;
             <p align="center">Haz clic para <a href="https://latinoamerica.fsc.org/es-ni/que%20es%20el%20FSC#:~:text=El%20Forest%20Stewardship%20Council%20(FSC,de%20los%20bosques%20del%20mundo">SABER MAS DE FSC</a> .</p>
         <p align="center"><a href="pre.htm">PRESENTACION FSC</a> .</p>
 	</section>
-<video width="760" height="413" controls autoplay muted>
+<video width="100%" height="100%" controls autoplay muted>
     <source src="fsc1.mp4"  type="video/mp4">
 </div>
     </header>
