--- a/pre.htm
+++ b/pre.htm
@@ -113,12 +113,8 @@
 		position: absolute;
 		width: 100%;
   		height: 40px;
-            background-image: url('fondo2.jpg');
-            background-size: cover; 
-            background-repeat: no-repeat; 
-            background-attachment: fixed; 
-            background-color: rgb(70, 0, 0); 
-            color: #000000; 
+		background-color: rgba(255, 255, 255, 0);
+            color: #000000;
             padding: 10px 0;
             text-align: center;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
