--- a/pre.htm
+++ b/pre.htm
@@ -138,6 +138,27 @@
             width: auto;
             height: auto; 
         }
+.rotating-element {
+  width: 800px;
+  height: 30px;
+  line-height: 300px;
+  transition: transform 0.5s ease-in-out; 
+}
+
+.rotating-element:hover {
+  transform: rotateY(360deg); 
+    
+.container h2{
+    background-image: linear-gradient(to right, #FF3300, #FF6600, #FF9900, #FFCC00, #FFFF00);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.container img
+{
+object-fit: cover;
+  width:100%;
+  height:100%;
+}
 
   /* Menú de navegación receptivo */
         .navbar {
