--- a/sec3.html
+++ b/sec3.html
@@ -257,7 +257,7 @@ object-fit: cover;
     <footer>
         <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
     </footer>
-
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
         $(document).ready(function () {
             $('.menu-toggle').click(function () {
