--- a/sec3.html
+++ b/sec3.html
@@ -222,7 +222,7 @@ object-fit: cover;
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
-            <a href="cal.html"><i class="fas fa-file"></i> INICIO</a>
+            <a href="cal.html"><i class="fas fa-file"></i> MENÚ </a>
             <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
             <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
         </nav>
