--- a/sec2.html
+++ b/sec2.html
@@ -223,9 +223,9 @@ object-fit: cover;
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
-            <a href="cal.html"><i class="fas fa-file"></i> INICIO </a>
+            <a href="cal.html"><i class="fas fa-file"></i> MENU </a>
             <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
-            <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
+            <a href="sec3.html"><i class="fas fa-file"></i> TEST </a>
         </nav>
     </div>
 </header>
