--- a/pre.htm
+++ b/pre.htm
@@ -212,10 +212,10 @@ object-fit: cover;
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
-            <a href="cal.html"><i class="fas fa-file"></i> INICIO</a>
-	    <a href="sec2.html"><i class="fas fa-file"></i> BPM </a>	
-            <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
-            <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
+            <a href="cal.html"><i class="fas fa-file"></i>MENÚ</a>
+	    <a href="sec2.html"><i class="fas fa-file"></i>BPM</a>	
+            <a href="sec2.html"><i class="fas fa-file"></i>FSC</a>
+            <a href="sec3.html"><i class="fas fa-file"></i>TEST</a>
         </nav>
     </div>
 </header>
