--- a/cal.html
+++ b/cal.html
@@ -229,9 +229,9 @@ object-fit: cover;
             <i class="fas fa-bars"></i>
         </div>
         <nav class="navbar">
-            <a href="sec1.html"><i class="fas fa-file"></i> BPM </a>
-            <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
-            <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
+            <a href="sec1.html"><i class="fas fa-file"></i>BPM</a>
+            <a href="sec2.html"><i class="fas fa-file"></i>FSC</a>
+            <a href="sec3.html"><i class="fas fa-file"></i>TEST</a>
         </nav>
     </div>
 </header>
