--- a/cal.html
+++ b/cal.html
@@ -232,7 +232,9 @@ object-fit: cover;
             <p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
         </section>
         <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p>
-    </div>
+	 <p align="center">Haz <a href="https://forms.gle/m2QYxXxG72tpJNWf9">CLICK</a> para evaluar la limpieza de las maquinas</p>
+   	
+ </div>
 
     <footer>
         <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
