--- a/eje.html
+++ b/eje.html
@@ -201,17 +201,22 @@ object-fit: cover;
 
 </head>
 <body>
-    <header>
-        <div class="header">
-            <img src="logo.jpg" alt="Logo de la empresa">
-	<h1>CALIDAD</h1>
- 	    <a href="cal.html"><i class="fas fa-file"></i> INICIO </a>
-            <a href="sec1.html"><i class="fas fa-file"></i> BUENAS PRACTICAS</a>
-            <a href="sec2.html"><i class="fas fa-file"></i> FSC </a>
-	    <a href="sec3.html"><i class="fas fa-file"></i> EXAMEN </a>
-	    
-     
-	</div>
+    <header class="header">
+<img src="logo.jpg" alt="Logo de la empresa">
+        <h3>CALIDAD</h3> 
+
+
+    <div class="header">
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
+        <nav class="navbar">
+            <a href="sec1.html"><i class="fas fa-file"></i>BPM</a>
+            <a href="sec2.html"><i class="fas fa-file"></i>FSC</a>
+            <a href="sec3.html"><i class="fas fa-file"></i>TEST</a>
+        </nav>
+    </div>
+</header>
 <div class="container">
 <div class="text">
         <section>
