--- a/sec3.html
+++ b/sec3.html
@@ -223,7 +223,7 @@ object-fit: cover;
                 <br>
                 <li><a class="button1" href="https://forms.gle/2qoxX5HfS6529DT27">CLICK AQUI para comenzar el examen(AREA DE VENTAS).</a> </li>
 		 <br>
-                <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI para comenzar el examen(AREA DE VENTAS).</a> </li>
+                <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI para comenzar el examen(AREA DE DISEÑO).</a> </li>
             </ol>
         </section>
     </div>
