--- a/cal.html
+++ b/cal.html
@@ -1,4 +1,4 @@
-<! -- CODIGO ECHO POR ALFONSO, CARLOS Y JONATHAN -->
+<! -- CODIGO HECHO POR ALFONSO, CARLOS Y JONATHAN -->
 
 <!DOCTYPE html>
 <html lang="es">
