--- a/eje.html
+++ b/eje.html
@@ -218,6 +218,11 @@ object-fit: cover;
             <h2 align="center">EJEMPLOS DE BUENAS PRACTICAS</h2>
             <ul>
     <li> <font color="#9900FF"> Higiene y limpieza:</font> Mantener un entorno de trabajo limpio y libre de contaminantes es esencial. Esto incluye la limpieza de las áreas de producción y el uso de ropa y equipos adecuados.</li>
+<div style="text-align: center;">	
+			<div class="imge">
+ 			<img src="bpm1.jpg" alt="BPM">
+			</div>	
+		</div>    
     <li> <font color="#9900FF"> Control de calidad:</font>  Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li>
     <li> <font color="#9900FF"> Seguridad del producto:</font>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li>
     <li> <font color="#9900FF"> Trazabilidad:</font>  Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li>
