--- a/eje.html
+++ b/eje.html
@@ -223,15 +223,15 @@ object-fit: cover;
  			<img src="bpm1.jpg" alt="BPM">
 			</div>	
 		</div>    
-    <li> <font color="#9900FF"> </br>Control de calidad:</font>  Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li>
-    <li> <font color="#9900FF"> </br> Seguridad del producto:</font>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li>
-    <li> <font color="#9900FF"> </br> Trazabilidad:</font>  Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li>
-    <li> <font color="#9900FF"> </br> Capacitación del personal:</font>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li>
-    <li> <font color="#9900FF"> </br> Almacenamiento adecuado:</font>  Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li>
-    <li> <font color="#9900FF"> </br> Etiquetado:</font>  Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li>
-    <li> <font color="#9900FF"> </br> Documentación:</font> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li>
-    <li> <font color="#9900FF"> </br> Manejo de residuos:</font>  Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li>
-    <li> <font color="#9900FF"> Mejora continua:</font>  Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li>
+    <li> <font color="#000000"> </br>Control de calidad:</font>  Establecer procedimientos para el control de calidad en cada etapa de producción para garantizar que las bolsas cumplan con los estándares de calidad.</li>
+    <li> <font color="#000000"> </br> Seguridad del producto:</font>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li>
+    <li> <font color="#000000"> </br> Trazabilidad:</font>  Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li>
+    <li> <font color="#000000"> </br> Capacitación del personal:</font>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li>
+    <li> <font color="#000000"> </br> Almacenamiento adecuado:</font>  Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li>
+    <li> <font color="#000000"> </br> Etiquetado:</font>  Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li>
+    <li> <font color="#000000"> </br> Documentación:</font> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li>
+    <li> <font color="#000000"> </br> Manejo de residuos:</font>  Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li>
+    <li> <font color="#000000"> Mejora continua:</font>  Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li>
 		<div style="text-align: center;">	
 			<div class="imge">
  			<img src="b2.jpg" alt="BPM">
